deployment/pawpatrol/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: migration-example-php
  labels:
    littleletter.de/cert-sync: "true"
    jwt-secret/sync: "true"
