deployment/pawpatrol/ingress-login.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: uitsmijter-proxy
spec:
  type: ExternalName
  externalName: uitsmijter-authserver.uitsmijter-nightly.svc.cluster.local
  ports:
    - port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: uitsmijter
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: uitsmijter-nightly-forward-header@kubernetescrd

spec:
  tls:
    - secretName: littleletter.de

  rules:
    - host: login-nightly.littleletter.de
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: uitsmijter-proxy
                port:
                  number: 80
