deployment/pawpatrol/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: uitsmijter-nightly-forward-auth@kubernetescrd

spec:
  tls:
    - secretName: littleletter.de
  rules:
    - host: php.littleletter.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-redirect-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-redirect-to-https@kubernetescrd"
spec:
  rules:
    - host: php.littleletter.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app
                port:
                  number: 80
